<?xml version="1.0"?>
<package format="2">
  <name>radar_ros_interface</name>
  <version>0.1.0</version>
  <description>The radar_ros_interface package</description>

  <maintainer email="nick.rotella@ainstein.ai">Nick Rotella</maintainer>

  <license>BSD</license>

  <url type="website">https://ainstein.ai/</url>
  <url type="repository">https://github.com/AinsteinAI/radar_ros_interface</url>
  <author email="nick.rotella@ainstein.ai">Nick Rotella</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>urdf</depend>

  <build_depend>roscpp</build_depend>
  <build_depend>can_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <build_export_depend>visualization_msgs</build_export_depend>
  <build_export_depend>can_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>can_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  
  <export>
  </export>

</package>
