<?xml version="1.0"?>
<package format="2">
  <name>rviz_radar_plugin</name>
  <version>0.10.3</version>
  <description>
     Radar data plugins for RViz.
  </description>
  <maintainer email="nick.rotella@ainstein.ai">Nick Rotella</maintainer>
  <license>BSD</license>

  <author>Nick Rotella</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>qtbase5-dev</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>radar_sensor_msgs</build_depend>
  
  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>libqt5-gui</exec_depend>
  <exec_depend>libqt5-widgets</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>radar_sensor_msgs</exec_depend>
  <exec_depend>libpcl-all</exec_depend>
  
  <export>
      <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
