<?xml version="1.0"?>
<package format="2">
  <name>radar_sensor_msgs</name>
  <version>0.1.0</version>
  <description>The radar_sensor_msgs package</description>

  <maintainer email="nick.rotella@ainstein.ai">Nick Rotella</maintainer>

  <license>BSD</license>

  <url type="website">https://ainstein.ai/</url>
  <url type="repository">https://github.com/AinsteinAI/radar_sensor_msgs</url>
  <author email="nick.rotella@ainstein.ai">Nick Rotella</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  
  <export>
  </export>

</package>
