<?xml version="1.0"?>
<package format="2">
  <name>ainstein_radar</name>
  <version>1.0.1</version>
  <description>ROS support for Ainstein radar sensors.</description>
  <maintainer email="nick.rotella@ainstein.ai">Nick Rotella</maintainer>
  <author>Nick Rotella</author>
  <license>BSD</license>
  <url type="website">https://ainstein.ai/</url>
  <url type="repository">https://github.com/AinsteinAI/ainstein_radar</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>ainstein_radar_msgs</exec_depend>
 
</package>
