<?xml version="1.0"?>
<package format="2">
  <name>ainstein_radar</name>
  <version>3.0.0</version>
  <description>
    ROS support for Ainstein radar sensors.
  </description>
  <maintainer email="nick.rotella@ainstein.ai">Nick Rotella</maintainer>
  <author>Nick Rotella</author>
  <license>BSD</license>
  <url type="website">https://wiki.ros.org/ainstein_radar</url>
  <url type="repository">https://github.com/AinsteinAI/ainstein_radar</url>
  <url type="bugtracker">https://github.com/AinsteinAI/ainstein_radar/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>ainstein_radar_drivers</exec_depend>
  <exec_depend>ainstein_radar_filters</exec_depend>
  <exec_depend>ainstein_radar_gazebo_plugins</exec_depend>
  <exec_depend>ainstein_radar_msgs</exec_depend>
  <exec_depend>ainstein_radar_rviz_plugins</exec_depend>
  <exec_depend>ainstein_radar_tools</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
