<?xml version="1.0"?>
<package format="2">
  <name>ainstein_radar_drivers</name>
  <version>1.0.2</version>
  <description>ROS drivers (interfaces) and nodes for Ainstein radars.</description>
  <maintainer email="nick.rotella@ainstein.ai">Nick Rotella</maintainer>
  <author>Nick Rotella</author>
  <license>BSD</license>

  <url type="website">https://ainstein.ai/</url>
  <url type="repository">https://github.com/AinsteinAI/ainstein_radar</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>can_msgs</depend>
  <depend>socketcan_bridge</depend>
  <depend>ainstein_radar_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>nodelet</depend>
  
  <export>
    <nodelet plugin="${prefix}/plugins/nodelet_k79.xml" />
    <nodelet plugin="${prefix}/plugins/nodelet_t79_bsd.xml" />
  </export>

</package>
