<?xml version="1.0"?>
<package format="2">
  <name>ainstein_radar_drivers</name>
  <version>3.0.1</version>
  <description>
    ROS drivers (interfaces) and nodes for Ainstein radars.
  </description>
  <maintainer email="nick.rotella@ainstein.ai">Nick Rotella</maintainer>
  <author>Nick Rotella</author>
  <license>BSD</license>
  <url type="website">https://wiki.ros.org/ainstein_radar_drivers</url>
  <url type="repository">https://github.com/AinsteinAI/ainstein_radar</url>
  <url type="bugtracker">https://github.com/AinsteinAI/ainstein_radar/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rviz_visual_tools</build_depend>

  <depend>roscpp</depend>
  <depend>can_msgs</depend>
  <depend>socketcan_bridge</depend>
  <depend>ainstein_radar_msgs</depend>
  <depend>ainstein_radar_filters</depend>
  <depend>nodelet</depend>

  
  <build_depend>message_generation</build_depend>
  <depend>std_msgs</depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>

</package>
