<?xml version="1.0"?>
<package format="2">
  <name>ainstein_radar_filters</name>
  <version>1.0.3</version>
  <description>Filtering and data transformation utilities for radar data.</description>
  <maintainer email="nick.rotella@ainstein.ai">Nick Rotella</maintainer>
  <author>Nick Rotella</author>
  <license>BSD</license>

  <url type="website">https://ainstein.ai/</url>
  <url type="repository">https://github.com/AinsteinAI/ainstein_radar</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>ainstein_radar_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>nodelet</depend>

  <export>
    <nodelet plugin="${prefix}/plugins/nodelet_radardata_to_pointcloud.xml" />
    <nodelet plugin="${prefix}/plugins/nodelet_radardata_range_filter.xml" />
  </export>

</package>
