<?xml version="1.0"?>
<package format="2">
  <name>ainstein_radar_filters</name>
  <version>3.0.1</version>
  <description>
    Filtering and data conversion utilities for radar data.
  </description>
  <maintainer email="nick.rotella@ainstein.ai">Nick Rotella</maintainer>
  <author>Nick Rotella</author>
  <license>BSD</license>
  <url type="website">https://wiki.ros.org/ainstein_radar_filters</url>
  <url type="repository">https://github.com/AinsteinAI/ainstein_radar</url>
  <url type="bugtracker">https://github.com/AinsteinAI/ainstein_radar/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>ainstein_radar_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>nodelet</depend>
  <depend>jsk_recognition_msgs</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_sensor_msgs</depend>

  <export>
    <nodelet plugin="${prefix}/plugins/nodelet_radar_target_array_to_point_cloud.xml" />
    <nodelet plugin="${prefix}/plugins/nodelet_radar_target_array_to_laser_scan.xml" />
    <nodelet plugin="${prefix}/plugins/nodelet_radar_passthrough_filter.xml" />
  </export>

</package>
