<?xml version="1.0"?>
<package format="2">
  <name>ainstein_radar_gazebo_plugins</name>
  <version>3.0.1</version>
  <description>
    Radar sensor plugins for the Gazebo simulator.
  </description>
  <maintainer email="nick.rotella@ainstein.ai">Nick Rotella</maintainer>
  <author>Nick Rotella</author>
  <license>BSD</license>
  <url type="website">https://wiki.ros.org/ainstein_radar_gazebo_plugins</url>
  <url type="repository">https://github.com/AinsteinAI/ainstein_radar</url>
  <url type="bugtracker">https://github.com/AinsteinAI/ainstein_radar/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>gazebo_plugins</depend>
  <depend>gazebo_ros</depend>
  <depend>roscpp</depend>
  <depend>ainstein_radar_msgs</depend>
  
  <export>
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" />  
  </export>

</package>
